--- a/app/accordion/index.html
+++ b/app/accordion/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Claculator</title>
-    <script src="src/styles/fonts/fontawesome/fontawesome-all.js"></script>
+    <title>Accordion Web Component by Waituk</title>
+    <script src="dist/styles/fonts/fontawesome/fontawesome-all.js"></script>
     <link rel="stylesheet" href="./dist/styles/styles.css">
   </head>
   <body>
