Updated tabs label with extra sector rules

--- a/app/tabs/index.html
+++ b/app/tabs/index.html
@@ -18,7 +18,7 @@
           <label class="tabButton" for="01">Home Decor</label>
           <div class="tabComponent__panel">
             <div class="tabComponent__panel__content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A vitae eveniet laboriosam ratione quis ducimus, rem, fuga qui autem optio officiis voluptates dolores impedit modi! Quibusdam neque, explicabo quis totam?</p>
+            <p>Browse through our list of home decor items.</p>
             </div>
           </div>
         </div>
@@ -28,7 +28,7 @@
           <label class="tabButton" for="02">Furniture</label>
           <div class="tabComponent__panel">
             <div class="tabComponent__panel__content">
-            <p>Bring the best out of master chef in you.</p>
+            <p>Flash sale on Living Room and Bedroom Furniture.</p>
             </div>
           </div>
         </div>
@@ -38,10 +38,21 @@
           <label class="tabButton" for="03">Kitchen</label>
           <div class="tabComponent__panel">
             <div class="tabComponent__panel__content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <p>Bring the best out of masterchef in you!!</p>
             </div>
           </div>
         </div>
+
+        <div class="tabComponent__item">
+          <input type="radio" name="tabInput" id="clearance">
+          <label class="tabButton" for="clearance">Clearance</label>
+          <div class="tabComponent__panel">
+            <div class="tabComponent__panel__content">
+            <p>Red hot deals at affordable prices. Check out our clearance section for more details.</p>
+            </div>
+          </div>
+        </div>
+
       </div>
     </main>
   </div>
