Add product list and form components

--- a/app/tabs/index.html
+++ b/app/tabs/index.html
@@ -15,9 +15,9 @@
       <div class="tabComponent">
         <div class="tabComponent__item">
           <input type="radio" name="tabInput" id="01" checked>
-          <label class="tabButton" for="01">Home Decor</label>
+          <label for="01">Home Decor</label>
           <div class="tabComponent__panel">
-            <div class="tabComponent__panel__content">
+            <div class="tabComponent__content">
             <p>Browse through our list of home decor items.</p>
             </div>
           </div>
@@ -25,9 +25,9 @@
 
         <div class="tabComponent__item">
           <input type="radio" name="tabInput" id="02">
-          <label class="tabButton" for="02">Furniture</label>
+          <label for="02">Furniture</label>
           <div class="tabComponent__panel">
-            <div class="tabComponent__panel__content">
+            <div class="tabComponent__content">
             <p>Flash sale on Living Room and Bedroom Furniture.</p>
             </div>
           </div>
@@ -35,9 +35,9 @@
 
         <div class="tabComponent__item">
           <input type="radio" name="tabInput" id="03">
-          <label class="tabButton" for="03">Kitchen</label>
+          <label for="03">Kitchen</label>
           <div class="tabComponent__panel">
-            <div class="tabComponent__panel__content">
+            <div class="tabComponent__content">
             <p>Bring the best out of masterchef in you!!</p>
             </div>
           </div>
@@ -45,9 +45,9 @@
 
         <div class="tabComponent__item">
           <input type="radio" name="tabInput" id="clearance">
-          <label class="tabButton" for="clearance">Clearance</label>
+          <label for="clearance">Clearance</label>
           <div class="tabComponent__panel">
-            <div class="tabComponent__panel__content">
+            <div class="tabComponent__content">
             <p>Red hot deals at affordable prices. Check out our clearance section for more details.</p>
             </div>
           </div>
